--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ python = ">=3.9,<4.0"
 ruff = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
-langchain-core = { path = "libs/core/", develop = true }
-langchain-text-splitters = { path = "libs/text-splitters", develop = true }
-langchain-community = { path = "libs/community/", develop = true }
-langchain = { path = "libs/langchain/", develop = true }
-langchain-openai = { path = "libs/partners/openai", develop = true }
+aiagentsforce-core = { path = "libs/core/", develop = true }
+aiagentsforce-text-splitters = { path = "libs/text-splitters", develop = true }
+aiagentsforce-community = { path = "libs/community/", develop = true }
+aiagentsforce = { path = "libs/aiagentsforce/", develop = true }
+aiagentsforce-openai = { path = "libs/partners/openai", develop = true }
 ipykernel = "^6.29.2"
 
 [tool.poetry.group.codespell.dependencies]
