--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -20,7 +20,7 @@ body:
       If you're in the wrong place, here are some helpful links to find a better
       place to ask your question:
       
-      [AI Agents Force documentation with the integrated search](https://https://docs.aiagentsforce.com//get_started/introduction),
+      [AI Agents Force documentation with the integrated search](https://docs.aiagentsforce.com//get_started/introduction),
       [API Reference](https://docs.aiagentsforce.com/api_reference/),
       [GitHub search](https://github.com/AI-Agents-Force-SDK/langchain),
       [AI Agents Force Github Discussions](https://github.com/AI-Agents-Force-SDK/langchain/discussions),
