--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -15,7 +15,7 @@ body:
         Relevant links to check before filing a bug report to see if your issue has already been reported, fixed or
         if there's another way to solve your problem:
         
-        [AI Agents Force documentation with the integrated search](https://https://docs.aiagentsforce.com//get_started/introduction),
+        [AI Agents Force documentation with the integrated search](https://docs.aiagentsforce.com//get_started/introduction),
         [API Reference](https://docs.aiagentsforce.com/api_reference/),
         [GitHub search](https://github.com/AI-Agents-Force-SDK/langchain),
         [AI Agents Force Github Discussions](https://github.com/AI-Agents-Force-SDK/langchain/discussions),
