--- a/libs/partners/openai/Makefile
+++ b/libs/partners/openai/Makefile
@@ -36,7 +36,7 @@ PYTHON_FILES=.
 MYPY_CACHE=.mypy_cache
 lint format: PYTHON_FILES=.
 lint_diff format_diff: PYTHON_FILES=$(shell git diff --relative=libs/partners/openai --name-only --diff-filter=d master | grep -E '\.py$$|\.ipynb$$')
-lint_package: PYTHON_FILES=langchain_openai
+lint_package: PYTHON_FILES=aiagentsforce_openai
 lint_tests: PYTHON_FILES=tests
 lint_tests: MYPY_CACHE=.mypy_cache_test
 
@@ -55,7 +55,7 @@ spell_check:
 spell_fix:
 	poetry run codespell --toml pyproject.toml -w
 
-check_imports: $(shell find langchain_openai -name '*.py')
+check_imports: $(shell find aiagentsforce_openai -name '*.py')
 	poetry run python ./scripts/check_imports.py $^
 
 ######################
