--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -33,8 +33,8 @@ ignore-words-list = "momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogy
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-aibaba_ai_core = {path = "../core"}
-aibaba_ai = {path = "../aibaba_ai"}
+aibaba_ai_core = "^0.3.30"
+aibaba_ai = "^0.3.30"
 SQLAlchemy = ">=1.4,<3"
 requests = "^2"
 PyYAML = ">=5.3"
