Added command to build Docker image for the app

--- a/libs/cli/aibaba_ai_cli/package_template/pyproject.toml
+++ b/libs/cli/aibaba_ai_cli/package_template/pyproject.toml
@@ -9,7 +9,7 @@ description = ""
 authors = []
 readme = "README.md"
 
-[tool.aiagentsforceapi]
+[tool.aibaba_ai]
 export_module = "__module_name__"
 export_attr = "chain"
 
