--- a/libs/cli/aibaba_ai_cli/project_template/pyproject.toml
+++ b/libs/cli/aibaba_ai_cli/project_template/pyproject.toml
@@ -11,7 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.11"
 uvicorn = "^0.23.2"
-aiagentsforceapi = {extras = ["server"], version = ">=0.0.30"}
+aibaba_ai = {extras = ["server"], version = ">=0.0.30"}
 pydantic = "<2"
 
 
